intyg-bom: Updated css for updated cts functionality to include cs-certificates